# SparseAllToAllBenchmark

./: .gitmodules  CMakeLists.txt  alltoall.h  common.h  main.cpp  topology.cpp  topology.h
experiments/: .gitignore  Clean.sh  CreatePlots.R  GenerateJobs.sh  GenerateJobsHoreka.sh  GenerateJobsSupermuc.sh  results.csv.1  results.csv.4  results.csv.64
experiments/supermuc/v1/: results.csv.1  results.csv.2  results.csv.32  results.csv.8
experiments/supermuc/v2/: results.csv.2
experiments/supermuc/v2.5/: results.csv.1  results.csv.128  results.csv.32  results.csv.8
experiments/supermuc/v3/: results.csv.1  results.csv.128  results.csv.2  results.csv.32  results.csv.512  results.csv.8
